deletes and rename files

--- a/BurgerMenu.html
+++ b/BurgerMenu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Christina's Burger Menu</title>
+    <title>Christian's Burger Menu</title>
   </head>
   <body>
     <header>
@@ -49,7 +49,7 @@
             <tr>
               <td style="width: 130px; height: 130px" align="center">
                 <img style="border-radius:10px ;"
-                src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fwww.lovelesscafe.com%2Fwp-content%2Fuploads%2F2019%2F11%2Fbbq-bacon-burger-recipe.jpg&tbnid=yrAlwI7DwQOhsM&vet=12ahUKEwji_fmLnuP9AhV__DgGHTtJBMYQMygAegUIARCFAg..i&imgrefurl=https%3A%2F%2Fwww.lovelesscafe.com%2Frecipes%2Fbbq-bacon-burger%2F&docid=kpV38p8tt0XMDM&w=1400&h=1132&q=%20bacon%20burger&ved=2ahUKEwji_fmLnuP9AhV__DgGHTtJBMYQMygAegUIARCFAg"
+                src=""
                 alt="Picture of a bacon burger" height="120px" width="120px"
               </td>
               <td style="width: 110px" align="center">Bacon Burger</td>
@@ -92,9 +92,9 @@
         <hr />
         <label for="Cheese preference">Would you like to add cheese?</label>
         <br />
-        <input type="radio" name="yes" />
+        <input required type="radio" name="Cheese preference" />
         <label for="yes">Yes</label>
-        <input type="radio" name="no" />
+        <input type="radio" name="cheese preference" />
         <label for="no">No</label>
 
         <hr />
